<resources>
    <string name="app_name">DinDinn Exam</string>
    <string name="txt_cart">Cart</string>
    <string name="text_cart_delivery_is_free">Delivery is free.</string>
    <string name="text_cart_value">Value: </string>
    <string name="text_cart_total_price_placeholder">Total price</string>
    <string name="btn_added_text">added + 1</string>
    <string name="text_pizza_header">Pizza</string>
    <string name="text_sushi_header">Sushi</string>
    <string name="text_drinks_header">Drinks</string>
    <string name="filters_text">FILTERS</string>
    <string name="text_spicy">Spicy</string>
    <string name="text_vegan">Vegan</string>
    <string name="final_price_placeholder">161 usd</string>
    <string name="text_info">Info</string>
    <string name="text_orders">Orders</string>
    <string name="text_ios_menu_button"><![CDATA[< Menu]]></string>
    <string name="pizza_header_text">Pizza</string>
    <string name="sushi_header_text">Sushi</string>
    <string name="drinks_header_text">Drinks</string>
    <string name="fab_button_proceed_to_cart">Proceed to cart</string>
    <string name="text_checkout">checkout</string>
    <string name="text_remove_item_from_cart">Remove item from cart</string>
    <string name="information">INFORMATION</string>
    <string name="orders">ORDERS</string>
    <string name="sushi">SUSHI</string>
</resources>