<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_delivery_is_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cart_delivery_is_free"
        android:textColor="#CFCDCD"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp" />


    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/text_cart_value"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_cart_total_price_placeholder"
            android:textColor="@android:color/black"
            android:textSize="36sp" />
    </LinearLayout>
</LinearLayout>